# nix-eval-lsp

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  flake.nix
src/: builtins.rs  eval.rs  main.rs  parse.rs  scope.rs  tests.rs  utils.rs  value.rs
